--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
+* {
+  /* border: 1px solid red; */
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
+  justify-content: center;
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  background-image: url("../public/background.jpg");
+  /* One thing I would really like to do is use blur-up techniques to help this image load more smoothly */
+}
+
+.landing-page {
+  display:flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
+  width: 60%;
+}
+
+.landing-copy-container {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  max-width: 40%;
+}
+
+.landing-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-width: 48%;
+  min-height: 60%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+}
+
+.signup-copy-container {
+  color: rgb(102,102,102);
+}
+
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-width: 48%;
+  min-height: 400px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+}
+
+.disqualified-page {
+  display:flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(102,102,102);
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.disqualified-content {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: left;
+  width: 90%;
+  height: 30%;
+  background-color: white;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error {
+  color: red;
 }
